# see-aicoding

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
src/see_aicoding/: __init__.py  __main__.py  cli.py  cursor_ext.py  monitor.py  render.py  snapshot.py  web.py
src/see_aicoding/web_static/: __init__.py  app.css  app.js  index.html
tests/: test_web_port_conflict.py
