[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "see-aicoding"
version = "0.1.0"
description = "Live system-wide monitor for Claude Code, Codex, and Cursor AI coding processes on macOS / Linux."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jinlong17", email = "lijinlong1117@gmail.com" }]
keywords = ["claude", "claude-code", "codex", "cursor", "ai", "monitor", "process", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = ["psutil>=5.9", "rich>=13"]

[project.scripts]
see-aicoding = "see_aicoding.cli:main"

[project.urls]
Homepage = "https://github.com/jinlong17/see-aicoding"
Repository = "https://github.com/jinlong17/see-aicoding"
Issues = "https://github.com/jinlong17/see-aicoding/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
see_aicoding = ["py.typed"]
